@@ -129,6 +129,8 @@ v1.2.0  --> 1.2.x :
 		- Fixed matchpath bug for a "path" without trailing '/', mainly occuring for speedtest_dirs
 		  This should also fix issues with dl_speedtest. Thanks to sukalis for notifying.
 		- Updated test-instructions for dl_speedtest in the README.
+		- Fixed broken findfileextsubp resulting in incomplete-indicators being created for
+		  nfo and sample on dirs with no sfv and containing subdirs with sfv
 
 v1.1.0a --> 1.2.0 :
 		- added option to make accept_script run prior to complete_script.
